[SP-2445][PDI-14520] Add "catch"s for exceptions resulting from the close of the JarOutputStream and added closing instructions for the input stream. Missed changes.